<resources>
    <string name="app_name">Dream Saver</string>

    <string name="loading">Memuat…</string>
    <string name="loading_number">0</string>
    <string name="loading_rupiah">Rp0</string>

    <!-- Item target -->
    <string name="remaining_days">H-</string>
    <string name="savings_today">Tabungan hari ini:</string>
    <string name="total_savings">Pencapaian</string>
    <string name="date_target">Target selesai</string>
    <string name="savings_target">Target tabungan</string>
    <string name="daily_target">Target harian</string>
    <string name="notification_1_target">Hari ini Anda belum menabung.</string>
    <string name="notification_2_target">Anda sudah menabung, tetapi belum sampai target harian.</string>
    <string name="notification_3_target">Target harian sudah tercapai.</string>
    <string name="notification_4_target">Hebat! Anda menabung lebih dari target harian.</string>

    <!-- MainActivity -->
    <string name="cd_menu_main">Menu utama</string>

    <!-- ManageTargetActivity -->
    <string name="title_manage_target">Kelola Rencana</string>

    <!-- AddUpdateTarget -->
    <string name="title_add_aut">Tambah Rencana Tabungan</string>
    <string name="title_update_aut">Edit Rencana Tabungan</string>

    <!-- SettingsActivity -->
    <string name="title_settings">Setelan</string>

    <!-- AboutActivity -->
    <string name="title_about">Tentang Aplikasi</string>
    <string name="dream_saver">Dream Saver</string>
</resources>