<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LaporanActivity">

    <include
        android:id="@+id/title_laporan"
        layout="@layout/layout_title" />
    <RelativeLayout
        android:layout_below="@+id/title_laporan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_daily_report"
            android:text="@string/daily_target"
            android:textColor="@color/white"
            style="@style/TextView.Regular" />
        <TextView
            android:id="@+id/tv_daily_report_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_daily_report"
            android:textColor="@color/white"
            android:text="Rp0"
            android:paddingLeft="80dp"
            style="@style/TextView.Regular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_target_report"
            android:text="@string/savings_target"
            android:textColor="@color/white"
            android:layout_below="@+id/tv_daily_report"
            style="@style/TextView.Regular"/>
        <TextView
            android:id="@+id/tv_target_report_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_target_report"
            android:layout_below="@+id/tv_daily_report_target"
            android:textColor="@color/white"
            android:text="Rp0"
            android:paddingLeft="55dp"
            style="@style/TextView.Regular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date_report"
            android:text="@string/date_target"
            android:textColor="@color/white"
            android:layout_below="@+id/tv_target_report"
            style="@style/TextView.Regular"/>
        <TextView
            android:id="@+id/tv_date_report_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_date_report"
            android:layout_below="@+id/tv_target_report_target"
            android:textColor="@color/white"
            android:text="Memuat"
            android:paddingLeft="77dp"
            style="@style/TextView.Regular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_result_report"
            android:text="@string/total_savings"
            android:textColor="@color/white"
            android:layout_below="@+id/tv_date_report"
            style="@style/TextView.Regular"/>
        <TextView
            android:id="@+id/tv_result_report_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_result_report"
            android:layout_below="@+id/tv_date_report_target"
            android:textColor="@color/white"
            android:text="Rp0"
            android:paddingLeft="90dp"
            style="@style/TextView.Regular"/>

        <RelativeLayout
            android:id="@+id/layout_progress"
            android:layout_below="@id/tv_result_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_percentage"
            android:text="0%"
            android:textColor="@color/white"
            style="@style/TextView.Regular"
            android:textSize="@dimen/font_sm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_toLeftOf="@+id/tv_counter"
            android:text="Memuat"
            style="@style/TextView.Regular"
            android:textSize="@dimen/font_sm"
            android:id="@+id/tv_remaining_date_report"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="|"
            style="@style/TextView.Regular"
            android:paddingHorizontal="5dp"
            android:textSize="@dimen/font_sm"
            android:layout_toLeftOf="@+id/tv_remaining"
            android:id="@+id/tv_counter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="H-"
            style="@style/TextView.Regular"
            android:textSize="@dimen/font_sm"
            android:layout_toLeftOf="@+id/tv_remaining_days_report"
            android:id="@+id/tv_remaining"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:text="Memuat"
            android:textSize="@dimen/font_sm"
            style="@style/TextView.Medium"
            android:id="@+id/tv_remaining_days_report"/>

        </RelativeLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_below="@+id/layout_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progress="0"
            android:scaleY="1"
            android:progressDrawable="@drawable/bg_curved_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="13dp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_report"
        android:paddingTop="10dp"/>

</LinearLayout>